--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ streamlit = "^1.29.0"
 openai = "^1.6.1"
 transformers = "^4.36.2"
 torch = {version = "^2.0.1+cu118", source = "torch-cu118"}
-sentencepiece = "^0.1.99"accelerate = "^0.25.0"
+sentencepiece = "^0.1.99"
+accelerate = "^0.25.0"
 
 [[tool.poetry.source]]
 name = "torch-cu118"
